# SO2-2019_TP1-SAT

./: .gitignore  .gitmodules  CMakeLists.txt
scripts/: file_socket_client.py  service_installation.sh  so2_tp1-sat.service  so3_tp1-sat.service  tcp_client_mock.py  test_update_file  udp_client.py
src/: command_controller.c  command_controller.h  command_router.c  command_router.h  satellite_app.c  system_stats_service.c  system_stats_service.h
src/shared/: socket_operation.h  tcp_socket_operations.c  udp_socket_operations.c
unittest/: json_tests.c
